# CRUD_DevStore

./: .gitignore  Readme.md  main.py  pyproject.toml  requirements.txt  routers.py  styles.py
Components/: barra_comprimida.py  barra_de_navegacion.py  buscar.py  contenedor_productos.py  crear_productos_nuevos.py  grid.py  imagenes.py
backend/: carrito.py  crear_productos.py  productos.py
frontend/: buscador.py  carrito.py  inicio.py  productos.py  vender.py
routers/: enrutamiento.py  routers.py
