[project]
name = "Dev Store"
version = "0.1.0"
description = "Aplicación de e-commerce con flet"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "SantyjL", email = "jlopezsanty1@gmail.com" }
]
dependencies = [
  "flet"
]

[tool.flet]
org = "com.mycompany"
product = "MyApp"
company = "My Company"
copyright = "Copyright (C) 2025 by My Company"

[tool.flet.app]
path = "src"